<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:layout_marginTop="?actionBarSize"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/image_size"
                android:layout_height="match_parent"
                android:contentDescription="@string/fill_up_image"
                android:src="@drawable/ic_local_gas_station_white_48dp"
                android:tint="@color/colorAccent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/enter_location_header"
                    style="?android:listSeparatorTextViewStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fill_up_location_header"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:id="@+id/fill_up_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:text="@string/fill_up_location_text"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"/>

                <TextView
                    android:id="@+id/fill_up_address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:text="@string/location_address"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"/>

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/divider_height"
            android:layout_marginTop="@dimen/margin_extra_small"
            android:background="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/details"
                android:textColor="@android:color/black"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_layout_height"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/fill_up_mileage"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/fill_up_mileage"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/fill_up_cost"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/fill_up_price_per_gallon"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/details_layout_height"
                android:orientation="horizontal"
                android:baselineAligned="false">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="@dimen/margin_small"
                        android:layout_weight="1"
                        android:gravity="bottom"
                        android:text="@string/fill_up_gallons"
                        android:textColor="@android:color/black"/>

                    <EditText
                        android:id="@+id/fill_up_total_gallons"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:inputType="numberDecimal"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        tools:ignore="NestedWeights">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_extra_small"
                            android:layout_weight="2"
                            android:text="@string/total_cost"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            android:id="@+id/fill_up_cost"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_extra_small"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:maxLines="1"
                            android:text="@string/no_price_yet"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_medium"/>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/margin_extra_small"
                            android:layout_weight="2"
                            android:text="@string/mpg_header"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_small"/>

                        <TextView
                            xmlns:tools="http://schemas.android.com/tools"
                            android:id="@+id/fill_up_mpg"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="@dimen/margin_extra_small"
                            android:layout_weight="1"
                            android:gravity="end"
                            android:maxLines="1"
                            android:text="@string/no_miles_yet"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/text_size_medium"/>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/share_fill_up_button"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/share_button_text"
                    android:src="@drawable/ic_action_share"
                    android:tint="@android:color/black"/>

                <TextView
                    android:id="@+id/fill_up_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:layout_weight="1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/text_size_medium"
                    tools:text="@string/date_example"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/margin_small"
            android:gravity="bottom|end">

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_fill_up_fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_small"
                android:contentDescription="@string/save"
                app:srcCompat="@drawable/ic_action_save"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/fill_up_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_collapseMode="pin"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>