<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?actionBarSize">

        <LinearLayout
            android:id="@+id/trip_list_no_logs_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/trip_list_no_logs_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_trips_logged"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_medium"/>

            <TextView
                android:id="@+id/trip_list_no_logs_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/touch_the_button_below_to_add_a_new_one"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/trip_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listItem="@layout/list_item_trip"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/add_trip_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_marginEnd="@dimen/margin_medium"
            android:contentDescription="@string/add_a_new_trip"
            app:srcCompat="@drawable/ic_menu_add"/>

    </FrameLayout>

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/trip_list_toolbar"
            layout_collapseMode="pin"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </android.support.design.widget.AppBarLayout>

</android.support.design.widget.CoordinatorLayout>